--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
 .App {
   text-align: center;
+  background-color: #F9F9F9;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
+  margin-top: 20px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .App-title {
