--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+html, body, #root {
+  height: 100%;
+}
+
 .App {
   text-align: center;
   background-color: #F9F9F9;
+  height: 100%;
 }
 
 .App-logo {
