--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 html, body, #root {
-  height: 100%;
+  background-color: #F9F9F9;
 }
 
 .App {
   text-align: center;
-  background-color: #F9F9F9;
-  height: 100%;
+  margin-bottom: 50px;
 }
 
 .App-logo {
