--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,26 @@ html, body, #root {
   justify-content: center;
 }
 
+.hotdog {
+  height: 60%;
+}
+
 .preset {
-  font-size: 70%;
-  padding: 4px;
-  margin: 10px;
-  border-radius: 5px;
   background: #444;
   color: white;
-  height: 100px;
-  width: 100px;
+  height: calc(100vh);
+  width: calc(100vw);
 
   display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.preset-colors {
+  display: flex;
+  align-content: center;
   justify-content: center;
   align-items: center;
   flex-direction: column;
